[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-quantum-context"
version = "0.1.0"
description = "Quantum-inspired pipeline for processing and resolving conflicts in large text contexts before feeding them to LLMs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["kiro_quantum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hypothesis]
profile = "default"
